--- a/index.html
+++ b/index.html
@@ -8,88 +8,99 @@
     <!-- hoja de estilos -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- título de página -->
-    <title>A7-MINDS-OF-TOMORROW</title>
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title>Título de la página</title>
     <!-- ícono de pàgina -->
     <!-- fuentes -->
     <!-- javascript -->
 </head>
 
 <body>
-    <div class="row">
-        <div class="column-1 image">
-            <h1><b>Welcome of the creaative after-school</b></h1>
+    <div class="titulo fuente">
+        <h1>Welcome to the creative after-school</h1>
+    </div>
+
+    <div class="row flex">
+        <div class="column-2 titulo1">
+            <h1 class="h1"> Our enrichment programs boost your kid to a brighter future</h1>
+            <p class="p1">Embark your kid into an inspirational journey of fun and discovert through a hands-on approach</p>
+        </div>
+        <div class="column-2">
+            <img class="section1" src="img/section-1.png" alt="">
         </div>
     </div>
-    <div class="row">
-        <div class="column-2 padding-m">
-            <h1>Our enrichment programs boost your kid to a brighter future</h1>
-            <h1>Embark your kid into an instpirational journey of fun and discovery through a hands-on approach</h1>
-        </div>
-        <div class="column-2 padding-m">
-            <img src="img/section-1.png" alt="">
-        </div>
-    </div>
-    <div class="row section-1">
-        <div class="column-1 padding-m">
-            <h1><b>Innovative programs for ages 6 to 13</b></h1>
-        </div>
-        <div class="column-4">
-            <p>Robotics</p>
-            <img src="img/section-2-a.jpeg" alt="">
-        </div>
-        <div class="column-4">
-            <p>Sustainable</p>
-            <img src="img/section-2-b.jpeg" alt="">
-        </div>
-        <div class="column-4">
-            <p>Digital</p>
-            <img src="img/section-2-c.jpeg" alt="">
-        </div>
-        <div class="column-4">
-            <p>Gaming</p>
-            <img src="img/section-2-d.jpeg" alt="">
-        </div>
-    </div>
-    <div class="row">
-        <div class="column-2 padding-m">
-            <img src="img/section-3.png" alt="">
-        </div>
-        <div class="column-2 padding-m">
-            <h1>Unlock your potencial in our Miami studio</h1>
-            <h1>Our new studio Miami features a Tech Room, an Open Creative Gallery, and a Hangout Zone for parents or caregivers with plenty of room for social distancing</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column-4 padding-m white foot">
-            <img src="img/section-4-a.jpg" alt="">
-        </div>
-        <div class="column-4 padding-m white foot">
-            <img src="img/section-4-b.jpg" alt="">
-        </div>
-        <div class="column-4 padding-m white foot">
-            <img src="img/section-4-c.jpg" alt="">
-        </div>
-        <div class="column-4 padding-m white foot">
-            <img src="img/section-4-d.jpg" alt="">
-        </div>
-    </div>
-    <div class="row section-2">
+
+    <div class="row fondo">
         <div class="column-1">
-            <h1>Come meet us. We would love to get lo know you!</h1>
+            <h1 class="h2">Innovative programs for ages 6 to 13.</h1>
+        </div>
+        <div class="column-4">
+            <p class="p2">Robotics</p>
+            <img class="imgc1" src="img/section-2-a.jpeg" alt="">
+        </div>
+        <div class="column-4">
+            <p class="p2">Sustainable</p>
+            <img class="imgc1" src="img/section-2-b.jpeg" alt="">
+        </div>
+        <div class="column-4">
+            <p class="p2">Digital</p>
+            <img class="imgc1" src="img/section-2-c.jpeg" alt="">
+        </div>
+        <div class="column-4">
+            <p class="p2">Gaming</p>
+            <img class="imgc1" src="img/section-2-d.jpeg" alt="">
         </div>
     </div>
-    <div class="row section-3">
-        <div class="column-3 white foot">
-            <p>@ Minds of tomorrow. LLC. 2020</p>
+
+    <div class="row col3 flex ">
+        <div class="column-2">
+            <img class="imgc3" src="img/section-3.png" alt="">
         </div>
-        <div class="column-3 white foot">
-            <p>Facebook</p>
-            <p>Instagram</p>
+        <div class="column-2">
+            <h1 class="h4">
+                Unlock your potencial in our Miami studio
+            </h1>
+            <p class="p4">
+                Our new studio in Miami features a Tech Room, an Open Cretive Gallery, and a Hangout Zone for parents or caregivers with plenty of room for social distancing. </p>
         </div>
-        <div class="column-3 white foot">
-            <p>Our programs</p>
-            <p>The Studio</p>
+    </div>
+
+    <div class="row">
+        <div class="column-4">
+            <img class="img4" src="img/section-4-a.jpg" alt="">
+        </div>
+        <div class="column-4">
+            <img class="img4" src="img/section-4-b.jpg" alt="">
+
+        </div>
+        <div class="column-4">
+            <img class="img4" src="img/section-4-c.jpg" alt="">
+
+        </div>
+        <div class="column-4">
+            <img class="img4" src="img/section-4-d.jpg" alt="">
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="column-1 title2">
+            <h1 class="h6">
+                Come meet us. We would love to get to know you!
+            </h1>
+        </div>
+    </div>
+
+    <div class="row fondo2">
+        <div class="column-2">
+            <p class="p5 abajo">© Minds of tomorrow, LLC.2020</p>
+        </div>
+        <div class="column-4">
+            <p class="p3 abajo">Facebook</p>
+            <p class="p3 abajo">Instagram</p>
+        </div>
+        <div class="column-4">
+            <p class="p3 abajo">Our programs</p>
+            <p class="p3 abajo">The Studio</p>
         </div>
     </div>
 
